CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#PROJECT(hand_eye_calibration)
#ADD_SUBDIRECTORY(src)
ADD_DEFINITIONS(-std=c++11)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)
INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})
#LINK_DIRECTORIES()
ADD_EXECUTABLE(hand_eye_calibration hand_eye_calibration.cpp)
TARGET_LINK_LIBRARIES(hand_eye_calibration ${OpenCV_LIBS} ${CERES_LIBRARIES})

